--- a/index.html
+++ b/index.html
@@ -5,5 +5,23 @@
   <title> Web Forms </title>
 </head>
 <body>
-  </body>
-  </html>
+  <h1>Pet Adoption Application</h1>
+  <form method="GET">
+  <label>Your Name:
+    <input type="text" name="applicantName">
+  </label>
+   <label>Your Email:
+     <input type="email" name="applicantEmail">
+   </label>
+  <label for="city">What city are you in?</label>
+  <input id="city" type="text" name="applicantCity">
+<label> How many pets are in your home?
+  <input type="number" name="petCount">
+</label>
+<label>To create account , enter a password>
+  <input type="password" name="accountPW">
+</label>
+    <input type="submit" value="Apply Now!">
+  </form>
+</body>
+</html>
