--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title> Web Forms </title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <h1>Pet Adoption Application</h1>
@@ -13,12 +14,17 @@
    <label>Your Email:
      <input type="email" name="applicantEmail">
    </label>
+
+     <input type="submit" value="Apply Now!">
+
+       <!-- the other syntax -->
   <label for="city">What city are you in?</label>
   <input id="city" type="text" name="applicantCity">
-<label> How many pets are in your home?
+
+ <label> How many pets are in your home?
   <input type="number" name="petCount">
 </label>
-<label>To create account , enter a password>
+<label>To create account , enter a password
   <input type="password" name="accountPW">
 </label>
     <input type="submit" value="Apply Now!">
