created new input options

--- a/index.html
+++ b/index.html
@@ -24,10 +24,65 @@
  <label> How many pets are in your home?
   <input type="number" name="petCount">
 </label>
+
+<label>Why do you want to adopt a new pet?
+   <textarea name="applicantReason" rows="4" cols="50">
+Beacaus I dont have enough cat hair on my sofa..
+   </textarea>
+</label>
+
+
+<fieldset>
+  <legend>What type of animals you are interested in?</legend>
+<label>Dogs
+  <input type="checkbox" name="type" value="dogs">
+</label>
+<label>Cats
+  <input type="checkbox" name="type" value="cats">
+</label>
+<label>Tiger
+  <input type="checkbox" name="type" value="tigerss">
+</label>
+<label>Lion
+  <input type="checkbox" name="type" value="lions">
+</label>
+<label>Peacock
+  <input type="checkbox" name="type" value="peacocks">
+</label>
+<label>Iguana
+  <input type="checkbox" name="type" value="iguanas">
+</label>
+</fieldset>
+
+<fieldset>
+  <legend>Are you interested in adopting  specials needs or eldrly pets?</legend>
+
+  <label>Yes
+    <input type="radio" name="special" value="yes">
+  </label>
+
+  <label>No
+    <input type="radio" name="special" value="no">
+  </label>
+</fieldset>
+
+<label>How many hours a day you can stay home tokeep a pet company?
+
+<select name="hours">
+  <option value="">Please select</option>
+  <option value="few">less than 10</option>
+  <option value="some">10 to 16</option>
+  <option value="many">more than 16</option>
+</select>
+
+
+</label>
+
 <label>To create account , enter a password
   <input type="password" name="accountPW">
 </label>
     <input type="submit" value="Apply Now!">
   </form>
+
 </body>
 </html>
