added new styles

--- a/index.html
+++ b/index.html
@@ -32,26 +32,25 @@ Beacaus I dont have enough cat hair on my sofa..
 </label>
 
 
-<fieldset>
-  <legend>What type of animals you are interested in?</legend>
+<fieldset class="checkbox">
+  <legend>What type of animals you are interested in adopting?</legend>
 <label>Dogs
-  <input type="checkbox" name="type" value="dogs">
+  <input type="checkbox" name="species" value="dogs">
+  <span class="checkmark"></span>
 </label>
 <label>Cats
-  <input type="checkbox" name="type" value="cats">
+  <input type="checkbox" name="species" value="cats">
+  <span class="checkmark"></span>
 </label>
 <label>Tiger
-  <input type="checkbox" name="type" value="tigerss">
+  <input type="checkbox" name="species" value="tigerss">
+  <span class="checkmark"></span>
 </label>
 <label>Lion
-  <input type="checkbox" name="type" value="lions">
+  <input type="checkbox" name="species" value="lions">
+  <span class="checkmark"></span>
 </label>
-<label>Peacock
-  <input type="checkbox" name="type" value="peacocks">
-</label>
-<label>Iguana
-  <input type="checkbox" name="type" value="iguanas">
-</label>
+
 </fieldset>
 
 <fieldset>
